--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta charset="utf-8">
     <title>Homepage</title>
     <link rel="icon" href="images/unicorn.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="styles/style.css" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
-    <!-- Part 1: Beginning of homepage -->
+    <!-- +++++++++Part 1: Beginning of homepage ++++++++++++++ -->
     <div class = "homepage">
       <header>
         <h1> joie de vivre</h1>
@@ -29,16 +31,18 @@
           <br>
               <button id="next-btn">next</button>
       </main>
+      <!-- footer  -->
+        <footer> Built with &#10084; by Mimi Wu</footer>
     </div>
     <!-- end of homepage -->
 
 
-    <!-- Part 2 - Begin page for actions -->
-    <div class = "actions">
+    <!--+++++++++++ Part 2 - Begin page for actions +++++++++++++ -->
+    <div class = "actionsPage">
       <header>
         <span id="currentDate"></span>
         <!-- navigate to homepage -->
-        <a href="index.html"><img id="home" src="https://cdn3.iconfinder.com/data/icons/complete-set-icons/512/home512x512.png"/></a>
+        <a href="index.html"><img class="home" src="https://cdn3.iconfinder.com/data/icons/complete-set-icons/512/home512x512.png"/></a>
       </header>
       <main>
         <h1 id="question">What would you like to do today?</h1>
@@ -52,11 +56,11 @@
     <!-- End of actions page -->
 
 
-    <!-- Part 3 - Begin page for notes -->
-    <div class = "notes">
+    <!--++++++++Part 3 - Begin page for notes+++++++ -->
+    <div class = "notesPage">
       <header>
         <!-- navigate to homepage -->
-        <a href="index.html"><img id="home" src="https://cdn3.iconfinder.com/data/icons/complete-set-icons/512/home512x512.png"/></a>
+        <a href="index.html"><img class="home" src="https://cdn3.iconfinder.com/data/icons/complete-set-icons/512/home512x512.png"/></a>
       </header>
       <main>
         <h1 id="questionTwo">What is on your mind?</h1>
@@ -66,27 +70,54 @@
         <button id="save-btn" type="button" name="save">save</button>
         <button id="see-all-btn" type="button" name="see-all">all notes</button>
 
+
         <section class="current-entries">
           <!-- See All: -->
           <div id="all-div">
             <p><b>All Notes:</b></p>
             <ul id="entries-list">
           <!-- append all notes here -->
-          </ul>
+          <!-- add delete and update button here -->
+            </ul>
           <br><hr>
           </div>
-
-
+        </section>
 
       </main>
     </div>
     <!-- End of notes page -->
 
 
+    <!-- Part 4 - Begin page for weather -->
+  <div class = "weatherPage">
+    <header>
+      <!-- navigate to homepage -->
+      <a href="index.html"><img class="home" src="https://cdn3.iconfinder.com/data/icons/complete-set-icons/512/home512x512.png"/></a>
+    </header>
 
+    <main>
+      <div class="left">
+        <div class="temp"><span id="temp">0</span>&deg;</div>
+        <div class="location"><span id="location">Location</span></div>
+      </div>
+      <div class="right">
+        <div class="top">
+          <img id="icon" src="http://openweathermap.org/img/w/01d.png"/>
+        </div>
+      </div>
 
+        <div class="bottom">
+          <div class="humidy">
+            <span id ="humidity">0</span>%
+          </div>
 
-      <!-- Part 4 - Begin page for weather -->
+          <div class="wind">
+            <span id="wind">0</span>mph<span id="direction">N</span>
+          </div>
+        </div>
+      </main>
+    </div>
+
 
       <!-- End of weather page -->
 
@@ -105,9 +136,8 @@
 
   <!-- CDN -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
   <script src="scripts/index.js" charset="utf-8"></script>
-  <!-- footer  -->
-  <footer> Built with &#10084; by Mimi Wu</footer>
 
   </body>
 
@@ -118,5 +148,4 @@
 
 <!--Credits
 formaction property: http://stackoverflow.com/questions/2906582/how-to-create-an-html-button-that-acts-like-a-link
-Quotes API: http://quotesondesign.com/the-api/
--->
+Quotes API: http://quotesondesign.com/the-api/ -->
