completed adding headlines

--- a/index.html
+++ b/index.html
@@ -152,8 +152,6 @@
 
       <!-- Part 5 - Begin page for news -->
       <div class = "newsPage">
-        <!-- hidden when a source is clicked on -->
-        <div class="news-sources">
           <header>
             <!-- navigate to homepage -->
             <a href="index.html"><img class="home" src="https://cdn3.iconfinder.com/data/icons/complete-set-icons/512/home512x512.png"/></a>
@@ -166,15 +164,15 @@
             <div class= "dropdown">
                 <select class="selection">
                   <option value="default">Choose</option>
-                  <option id ="bbc-news" name="chosen-option" value="bbcnews">BBC News</option>
+                  <option id ="bbcnews" name="chosen-option" value="bbcnews">BBC News</option>
                   <option id ="bloomerg" name="chosen-option" value="bloomberg">Bloomerg</option>
                   <option id ="cnn" name="chosen-option" value="cnn">CNN</option>
                   <option id ="engadget" name="chosen-option" value="engadget">Engadget</option>
-                  <option id ="entertainment-weekly" name="chosen-option" value="entertainment-weekly">Entertainment Weekly</option>
+                  <option id ="entertainmentweekly" name="chosen-option" value="entertainmentweekly">Entertainment Weekly</option>
                   <option id ="espn" name="chosen-option" value="espn">ESPN</option>
                   <option id ="techcrunch" name="chosen-option" value="techcrunch">TechCrunch</option>
-                  <option id ="huffington" name="chosen-option" value="huffington">Huffington Post</option>
-                  <option id ="wired" name="chosen-option" value="wired">Wired</option>
+                  <option id ="thehuffingtonpost" name="chosen-option" value="thehuffingtonpost">Huffington Post</option>
+                  <option id ="wiredde" name="chosen-option" value="wiredde">Wired</option>
                 </select>
                 <br>
                 <button type="button" name="go-button" id="go-button">GO</button>
@@ -186,9 +184,17 @@
             <!-- hidden when newsPage is first loaded -->
             <div class="headlines">
               <h1> Here are today's top headlines </h1>
-                <!-- chosen logo goes here and top headlines -->
-                <div id="news-logo"><div>
                 <div id="headlines"></div>
+                  <div id="headline1"></div>
+                  <br>
+                  <div id="headline2"></div>
+                  <br>
+                  <div id="headline3"></div>
+                  <br>
+                  <div id="headline4"></div>
+                  <br>
+                  <div id="headline5"></div>
+                  <br>
 
             <!-- summary -->
               <div class = "summary"></div>
