continuing with crud

--- a/index.html
+++ b/index.html
@@ -186,18 +186,27 @@
               <h1> Here are today's top headlines </h1>
                 <div id="headlines"></div>
                   <div id="headline1"></div>
+                  <div id="summary1"></div>
                   <br>
-                  <div id="headline2"></div>
-                  <br>
-                  <div id="headline3"></div>
-                  <br>
-                  <div id="headline4"></div>
-                  <br>
-                  <div id="headline5"></div>
                   <br>
 
-            <!-- summary -->
-              <div class = "summary"></div>
+                  <div id="headline2"></div>
+                  <div id="summary2"></div>
+                  <br>
+                  <br>
+
+                  <div id="headline3"></div>
+                  <div id="summary3"></div>
+                  <br>
+                  <br>
+
+                  <div id="headline4"></div>
+                  <div id="summary4"></div>
+                  <br>
+                  <br>
+
+                  <div id="headline5"></div>
+                  <div id="summary5"></div>
 
             </div>
           </main>
@@ -208,13 +217,7 @@
 
 
 
-
-
       <!-- End of news page -->
-
-
-
-
 
 
 
@@ -232,6 +235,6 @@
 
 
 
-<!--Credits
+<!--More credits
 formaction property: http://stackoverflow.com/questions/2906582/how-to-create-an-html-button-that-acts-like-a-link
 Quotes API: http://quotesondesign.com/the-api/ -->
